fixed overlay reminder message wrapping on mobile

--- a/css/app.css
+++ b/css/app.css
@@ -860,7 +860,10 @@ a:hover {
     min-width: auto; 
   }
   .overlay-footer .overlay-footer-item {
+    height: auto;
     min-width: auto;
+    line-height: 1.2em;
+    padding: 15px;
   }
   .overlay-message > .overlay-im-icon {
     width: 12%;
